apps/oxlint/src/snapshots/fixtures__tsgolint_config_error_--type-aware@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware
working directory: fixtures/tsgolint_config_error
----------

  x Invalid tsconfig
   ,-[tsconfig.json:1:1]
 1 | {
   : ^
 2 |     "compilerOptions": {
   `----
  help: Option 'baseUrl' has been removed. Please remove it from your configuration.
        See https://github.com/oxc-project/tsgolint/issues/351 for more information.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 104 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
