apps/oxlint/src/snapshots/fixtures__tsgolint_type_error_--type-check@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-check
working directory: fixtures/tsgolint_type_error
----------
The `--type-check` option requires type-aware linting.
Use `--type-aware --type-check` or enable `options.typeAware` in your config.
----------
CLI result: InvalidOptionTypeCheckWithoutTypeAware
----------
