apps/oxlint/src/snapshots/fixtures__two_rules_with_same_name_-c .oxlintrc.json test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json test.js
working directory: fixtures/two_rules_with_same_name
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 74 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
